# trackerzoomermac

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
data/effects/: trackerzoomer.effect
src/: plugin-main.c  trackerzoomer-filter.c  trackerzoomer-filter.h
